src/test/ui/try-on-option-diagnostics.stderr
error[E0277]: the `?` operator can only be used in a function that returns `Result` or `Option` (or another type that implements `std::ops::Try`)
  --> $DIR/try-on-option-diagnostics.rs:7:5
   |
LL |     x?;
   |     ^^ cannot use the `?` operator in a function that returns `u32`
   |
   = help: the trait `std::ops::Try` is not implemented for `u32`
   = note: required by `std::ops::Try::from_error`

error[E0277]: the `?` operator can only be used in a closure that returns `Result` or `Option` (or another type that implements `std::ops::Try`)
  --> $DIR/try-on-option-diagnostics.rs:14:9
   |
LL |         x?;
   |         ^^ cannot use the `?` operator in a closure that returns `{integer}`
   |
   = help: the trait `std::ops::Try` is not implemented for `{integer}`
   = note: required by `std::ops::Try::from_error`

error: aborting due to 2 previous errors

For more information about this error, try `rustc --explain E0277`.
